fixed z-index (for bootstrap modal)

--- a/resources/sass/bootstrap-sidebar.scss
+++ b/resources/sass/bootstrap-sidebar.scss
@@ -168,7 +168,7 @@ body {
     .navbar {
         position: fixed !important;
         width: 100vw !important;
-        z-index: 1200;
+        z-index: 101;
         left: 0;
         top: 0;
     }
